# detecting-malicious-IPs-with-GCN

./: notebook.ipynb  pyproject.toml  readme.md
